Use GrpcSearchClient from tinkar core